<resources>
    <string name="app_name">TranilityInventoryManagement</string>


    <!-- Strings related to login -->
    <string name="textUserName">User Name</string>
    <string name="textPassword">Password</string>
    <string name="action_sign_in">Login</string>


    <string name="textAdminAppTextWhenDisabled">Please Enable application Admin privileges , after enabling it you will be bind to use the policy enforced by this application.</string>
    <string name="textAdminAppWhenEnabled">Currently device is working under policy enforced by App .\nTo remove these policies disable the app.
    </string>


    <string name="textDisableTheDevieAdminApp">You may now uninstall the application.</string>

    <string name="textEnableLocation">App wants to access your location please enable location services.</string>


    <string name="textReports">Check Device Reports</string>
    <string name="textLogout">Logout</string>
    <string name="textOn">On</string>
    <string name="textOk">OK</string>
    <string name="textCancel">CANCEL</string>
    <string name="textOff">Off</string>
    <string name="textSubmit">Submit</string>
    <string name="textEnterMasterPassword">Enter Master Password</string>
    <string name="textDeviceId">Device Id:</string>
    <string name="textReportScreen">Report Screen</string>
    <string name="textContinueWithAdminPolicy">Continue with Admin Policies</string>
    <string name="textEnterMasterpassword">If you want to contine use the device please enter master password or else continue using device with Admin policies.</string>
    <string name="title_activity_reports_screen">ReportsScreen</string>
    <string name="textNoReportAvaliable">No Reports Avaliable</string>
    <string name="textErrorOccured">Sorry! some error occurred.</string>
    <string name="textUseName">User Name</string>
    <string name="textInTime">In Time</string>
    <string name="textOutTime">Out Time</string>
</resources>
