<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"

    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/metrics_20"
        android:src="@drawable/transility_logo"

        />


    <TextView
        android:id="@+id/messageLineTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:padding="@dimen/metrics_20"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textColorBlack" />

    <Switch
        android:id="@+id/enableDeviceApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/metrics_20"
        android:textOff="@string/textOff"
        android:textOn="@string/textOn"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reportsBtn"
        style="?android:textAppearanceSmall"
        android:layout_width="@dimen/metrics_200"
        android:layout_height="@dimen/metrics_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/metrics_20"
        android:background="@color/backMaroon"
        android:padding="@dimen/metrics_10"
        android:text="@string/textReports"
        android:textColor="@color/textColor"
        android:visibility="gone" />

    <Button
        android:id="@+id/logoutBtn"
        style="?android:textAppearanceSmall"
        android:layout_width="@dimen/metrics_200"
        android:layout_height="@dimen/metrics_45"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/metrics_20"
        android:background="@color/backMaroon"
        android:padding="@dimen/metrics_10"
        android:text="@string/textLogout"
        android:textColor="@color/textColor"
        android:visibility="gone" />


</LinearLayout>