<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/metrics_10"

    tools:context=".MasterPasswordScreen">


<TextView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"

    android:text="@string/textEnterMasterpassword"
    />
    <EditText
        android:id="@+id/passwordFieldEt"
        android:layout_width="@dimen/metrics_300"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="@dimen/metrics_10"
        android:textColor="@color/textColorBlack"
        android:hint="@string/textEnterMasterPassword"
        android:inputType="textPassword"
        android:gravity="center"
        />
    <Button
        android:id="@+id/masterpasswordEntredBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSubmit"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:background="@color/backMaroon"
        android:padding="@dimen/metrics_10"

        android:layout_marginTop="@dimen/metrics_10"
        />
    <Button
        android:id="@+id/continueWithAdminPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textContinueWithAdminPolicy"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:padding="@dimen/metrics_10"

        android:background="@color/backMaroon"
        android:layout_marginTop="@dimen/metrics_10"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/errorColorMaroon"
        android:layout_marginTop="@dimen/metrics_20"
        android:padding="@dimen/metrics_10"
        android:gravity="center"

        android:id="@+id/error_message"

        />

</LinearLayout>
