<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/reportScreenTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:id="@+id/parentContainerLv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/metrics_1"
            android:background="@color/backMaroon" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/drawable_reports"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="1"
                android:text="@string/textUserName"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/intTimeTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/drawable_reports"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="1"
                android:text="@string/textInTime"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/outTimeTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/drawable_reports"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="1"
                android:text="@string/textOutTime"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reportsScreenRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/metrics_10" />


    </LinearLayout>

    <TextView
        android:id="@+id/errorMessageTv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textColorMaron"
        android:visibility="gone" />
</FrameLayout>